fixed spacing on init

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -508,6 +508,7 @@ footer .create-btn:hover {
   width: 100%;
   height: 25px;
   border: 1px solid #EBEBEC;
+  padding-left: 5px;
 }
 
 /* content page heights */
@@ -519,7 +520,11 @@ footer .create-btn:hover {
 
 #initialize {
   height: 90px;
-  margin-top: -45px;
+  margin-top: -85px;
+}
+
+#initialize h2 {
+  padding-bottom: 10px;
 }
 
 #initializing {
